--- a/Basilisk/Base.lproj/Main.storyboard
+++ b/Basilisk/Base.lproj/Main.storyboard
@@ -834,7 +834,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="180" height="497"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="large" viewBased="YES" indentationPerLevel="13" outlineTableColumn="NCb-8h-mzO" id="Z2u-9m-m6l">
+                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="medium" viewBased="YES" indentationPerLevel="13" outlineTableColumn="NCb-8h-mzO" id="Z2u-9m-m6l">
                                             <rect key="frame" x="0.0" y="0.0" width="180" height="497"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <size key="intercellSpacing" width="17" height="0.0"/>
