--- a/Basilisk/Chat/Messages/MessageGroupHeader.xib
+++ b/Basilisk/Chat/Messages/MessageGroupHeader.xib
@@ -17,7 +17,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <stackView distribution="fill" orientation="horizontal" alignment="centerY" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LNm-0A-zZC">
-                    <rect key="frame" x="10" y="3" width="66" height="25"/>
+                    <rect key="frame" x="10" y="3" width="157" height="25"/>
                     <subviews>
                         <customView translatesAutoresizingMaskIntoConstraints="NO" id="lB3-uN-kCv" customClass="RoundingView" customModule="Basilisk" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
@@ -36,10 +36,18 @@
                             </constraints>
                         </customView>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="chR-WG-ypf">
-                            <rect key="frame" x="31" y="4" width="37" height="16"/>
-                            <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="xrR-FT-xSv">
+                            <rect key="frame" x="31" y="4" width="105" height="16"/>
+                            <textFieldCell key="cell" lineBreakMode="clipping" title="username#0000" id="xrR-FT-xSv">
                                 <font key="font" metaFont="system"/>
                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                            </textFieldCell>
+                        </textField>
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ufi-Tm-TTI">
+                            <rect key="frame" x="140" y="5" width="19" height="14"/>
+                            <textFieldCell key="cell" lineBreakMode="clipping" title="1m" id="SKE-dN-ME7">
+                                <font key="font" metaFont="smallSystem"/>
+                                <color key="textColor" name="tertiaryLabelColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
@@ -50,8 +58,10 @@
                     <visibilityPriorities>
                         <integer value="1000"/>
                         <integer value="1000"/>
+                        <integer value="1000"/>
                     </visibilityPriorities>
                     <customSpacing>
+                        <real value="3.4028234663852886e+38"/>
                         <real value="3.4028234663852886e+38"/>
                         <real value="3.4028234663852886e+38"/>
                     </customSpacing>
@@ -65,6 +75,7 @@
                 <outlet property="groupAuthorTextField" destination="chR-WG-ypf" id="kly-7l-fl5"/>
                 <outlet property="groupAvatarImageView" destination="cxd-Dc-WYh" id="bee-aK-mpT"/>
                 <outlet property="groupAvatarRounding" destination="lB3-uN-kCv" id="RiI-NX-JTT"/>
+                <outlet property="groupTimestampTextField" destination="ufi-Tm-TTI" id="WpO-zw-VV3"/>
             </connections>
             <point key="canvasLocation" x="139" y="150"/>
         </customView>
